# Projeto-TR1

./: README.md  camada-enlace.py  camada-fisica.py  camada_enlace.py  camada_fisica.py  decode_camada_enlace.py  decode_camada_fisica.py  interface.py  projeto_tr1.py  pyproject.toml  rx.py  tx.py
.ipynb_checkpoints/: camada_fisica-checkpoint.py
Servidor/: decode_camada_enlace.py  decode_camada_fisica.py  server.py
