[project]
name = "projeto-tr1"
version = "0.1.0"
description = ""
authors = [
    {name = "LdSaGL",email = "lucas.sa.licio@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "websockets (>=14.1,<15.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "numpy (>=2.2.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
